# seo-indexing-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  QUICKSTART.md  README.md  SEO_INDEXING_TRACKER_DESIGN.md  alembic.ini  captain-definition  docker-compose.yml  pyproject.toml  scheduler-jobs.sqlite  tasks.json
data/: seo_indexing_tracker.db
docs/: ARCHITECTURE.md  AUTH_SETUP.md  CODE_REVIEW_PLAN.md  DECISIONS.md  DEPLOYMENT.md  INDEXPULSE_DESIGN_SYSTEM.md  OBSERVABILITY.md
migrations/: env.py
migrations/versions/: 2316699081a0_add_sitemap_refresh_progress.py  3b991fb4d16c_add_activity_logs.py  8a063e7fa036_add_quota_discovery_fields_to_website.py  992baa435c67_initial_schema.py  be315f2f97af_add_job_executions_and_url_index_status.py
scripts/: backfill_url_status.py  recover_url_status_from_non_rate_limited_history.py  reset_quota_cooldown.py
src/: main.py
src/seo_indexing_tracker/: __init__.py  config.py  database.py  main.py  tooling.py
src/seo_indexing_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/seo_indexing_tracker/api/: __init__.py  activity.py  auth.py  config_validation.py  index_stats.py  queue.py  quota.py  scheduler.py  service_accounts.py  sitemap_progress.py  sitemaps.py  urls.py  web.py  websites.py
src/seo_indexing_tracker/middleware/: auth.py
src/seo_indexing_tracker/models/: __init__.py  activity_log.py  base.py  index_status.py  job_execution.py  quota_usage.py  rate_limit_state.py  service_account.py  sitemap.py  sitemap_refresh_progress.py  submission_log.py  url.py  website.py
src/seo_indexing_tracker/schemas/: __init__.py  auth.py  config_validation.py  index_status.py  service_account.py  sitemap.py  submission_log.py  url.py  website.py
src/seo_indexing_tracker/services/: __init__.py  activity_service.py  auth_service.py  batch_processor.py  config_validation.py  cooldown_service.py  dashboard_service.py  google_api_factory.py  google_credentials.py  google_errors.py  google_indexing_client.py  google_url_inspection_client.py  index_stats_service.py  job_recovery_service.py  job_runner.py  priority_queue.py  processing_pipeline.py  queue_eta_service.py  queue_template_service.py  quota_discovery_service.py  quota_service.py  rate_limiter.py  scheduler.py  sitemap_decompressor.py  sitemap_fetcher.py  sitemap_index_parser.py  sitemap_type_detector.py  sitemap_url_parser.py  trigger_indexing_service.py  url_discovery.py  url_inspection_service.py  url_item_builder.py  url_submission_service.py  website_detail_service.py
src/seo_indexing_tracker/static/: __init__.py
src/seo_indexing_tracker/static/css/: app.css
src/seo_indexing_tracker/templates/: __init__.py  base.html
src/seo_indexing_tracker/templates/pages/: access_denied.html  dashboard.html  login.html  queue.html  sitemaps.html  website_detail.html  website_urls.html  (+1 more)
src/seo_indexing_tracker/utils/: __init__.py  batch_helpers.py  form_helpers.py  index_status.py  job_helpers.py  logging.py  sequence_helpers.py  shared_helpers.py
tests/: test_main.py  test_migrations.py
tests/api/: test_dashboard_api.py  test_index_stats_api.py  test_queue_api.py  test_scheduler_api.py  test_urls_api.py  test_web_app_setup.py  test_web_trigger_indexing.py
tests/integration/: test_crash_recovery.py
tests/services/: test_batch_processor.py  test_config_validation.py  test_google_api_factory.py  test_google_credentials.py  test_google_errors.py  test_google_indexing_client.py  test_google_url_inspection_client.py  test_priority_queue.py  test_processing_pipeline.py  test_quota_discovery_service.py  test_quota_service.py  test_rate_limiter.py  test_scheduler.py  test_sitemap_fetcher.py  test_sitemap_index_parser.py  test_sitemap_type_detector.py  test_sitemap_url_parser.py  test_url_discovery.py
(+11 files in other folders)
