[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-indexing-tracker"
version = "0.1.0"
description = "SEO indexing tracker service for monitoring indexing coverage."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "httpx>=0.28.0",
  "lxml>=5.3.0",
  "google-api-python-client>=2.149.0",
  "google-auth>=2.35.0",
  "apscheduler>=3.10.4",
  "jinja2>=3.1.4",
  "python-dotenv>=1.0.1",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
prod = []
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=4.0.1",
  "ruff>=0.7.0",
  "mypy>=1.12.0",
  "black>=24.10.0",
]

[project.scripts]
seo-indexing-tracker = "seo_indexing_tracker.main:main"
lint = "seo_indexing_tracker.tooling:lint"
format = "seo_indexing_tracker.tooling:format"
typecheck = "seo_indexing_tracker.tooling:typecheck"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
files = ["src", "tests"]
strict = true
pretty = true
show_error_codes = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
prod = []
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "pre-commit>=4.0.1",
  "ruff>=0.7.0",
  "mypy>=1.12.0",
  "black>=24.10.0",
]
